--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <html>
-<head>
-</head>
+  <head>
+    <title>Личная страница</title>
+	<link rel="stylesheet" type="text/css" href="css/css.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+  </head>
 <body>
 <p><b>Студент</b>: Овечкин А.С.</p>
 <p><b>Группа</b>: ИДМ-18-02</p>
-<p align="center"><h3>Отчеты по лабораторным работам</h3></p>
-<table align="center">
- <caption><h1>Лабораторные работы</h1></caption>
-  <tr>
-    <th>#1</th>
-    <th>#2</th>
-    <th>#3</th>
-    <th>#4</th>
-   </tr>
-   <tr><td></td><td></td><td></td><td></td></tr>
-   <tr><td></td><td></td><td></td><td></td></tr>
-   <tr><td></td><td></td><td></td><td></td></tr>
-   <tr><td></td><td></td><td></td><td></td></tr>
-</table>
+ <header>
+    <div><h1> Личная страница студента группы ИДМ-17-02 Харсеева В.Е. </h1></div>
+	<div class="menu">
+	<div><img src="pics/stankin-logo.png" class="logo"></div>
+	<nav>
+	<ul>
+	<li><a href="#1">Лабораторная работа №1</a></li>
+	<li><a href="#2">Лабораторная работа №2</a></li>
+	<li><a href="#3">Лабораторная работа №3</a></li>
+	<li><a href="#4">Лабораторная работа №4</a></li>
+	</ul>
+	</nav>
+	<div class="st4"><canvas id="canvas" height="150" width="150"></canvas></div>	
+	</div>
+</header>
 </body>
 </html>
