--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <p><b>Студент</b>: Овечкин А.С.</p>
 <p><b>Группа</b>: ИДМ-18-02</p>
  <header>
-    <div><h1> Личная страница студента группы ИДМ-17-02 Харсеева В.Е. </h1></div>
 	<div class="menu">
 	<div><img src="pics/stankin-logo.png" class="logo"></div>
 	<nav>
@@ -22,5 +21,18 @@
 	<div class="st4"><canvas id="canvas" height="150" width="150"></canvas></div>	
 	</div>
 </header>
+<section id="1">
+<div class="frame">
+<div class="st1">
+<a onclick="javascript:document.getElementById('st2').style.display='block'" href="javascript:void(0)">
+	<h3>Лабораторная работа №1</h3>
+Создание персональной страницы-отчета на github и работа с git<br>
+<div id="st2" class="st2" style="display:none"> 
+<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st2').style.display='none'"><p>Цели:</p>
+1. Зарегистрироваться на GitHub; <br>
+2. Создать персональную веб страницу-отчёт с использованием html, css, js; <br>
+3. Загрузить персональную веб страницу-отчёт в репозиторий на GitHub.</a></div>
+</div>
+</section>
 </body>
 </html>
