--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <div class="st1">
 <a onclick="javascript:document.getElementById('st2').style.display='block'" href="javascript:void(0)">
 	<h3>Лабораторная работа №1</h3>
-Создание персональной страницы-отчета на github и работа с git<br>
+	<h5><b>"Экосистема разработки программ с открытым кодом":</b></h5>
+	Создание персональной страницы-отчета на github и работа с git<br>
 <div id="st2" class="st2" style="display:none"> 
 <a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st2').style.display='none'"><p>Цели:</p>
 1. Зарегистрироваться на GitHub; <br>
@@ -34,5 +35,16 @@
 3. Загрузить персональную веб страницу-отчёт в репозиторий на GitHub.</a></div>
 </div>
 </section>
+	<section id="2">
+<div class="frame">
+<div class="st1">  
+<a onclick="javascript:document.getElementById('st3').style.display='block'" href="javascript:void(0)">
+	<h3>Лабораторная работа №2</h3>
+	<h5><b>"Разработка простого веб-приложения":</b></h5>
+Проектирование и разработка индивидуального или коллективного веб-приложения с использованием html,css,js + json,xml
+</br>
+<div id="st3" class="st2" style="display:none">
+	</div>
+	</section>
 </body>
 </html>
