--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <p><b>Группа</b>: ИДМ-18-02</p>
  <header>
 	<div class="menu">
-	<div><img src="pics/stankin-logo.png" class="logo"></div>
 	<nav>
 	<ul>
 	<li><a href="#1">Лабораторная работа №1</a></li>
@@ -17,8 +16,7 @@
 	<li><a href="#3">Лабораторная работа №3</a></li>
 	<li><a href="#4">Лабораторная работа №4</a></li>
 	</ul>
-	</nav>
-	<div class="st4"><canvas id="canvas" height="150" width="150"></canvas></div>	
+	</nav>	
 	</div>
 </header>
 <section id="1">
@@ -30,9 +28,9 @@
 	Создание персональной страницы-отчета на github и работа с git<br>
 <div id="st2" class="st2" style="display:none"> 
 <a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st2').style.display='none'"><p>Цели:</p>
-1. Зарегистрироваться на GitHub; <br>
-2. Создать персональную веб страницу-отчёт с использованием html, css, js; <br>
-3. Загрузить персональную веб страницу-отчёт в репозиторий на GitHub.</a></div>
+	<p>1. Зарегистрироваться на GitHub;</p> <br>
+<p>2. Создать персональную веб страницу-отчёт с использованием html, css, js;</p> <br>
+<p>3. Загрузить персональную веб страницу-отчёт в репозиторий на GitHub.</p></a></div>
 </div>
 </section>
 	<section id="2">
