--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
 <div class="frame">
 <div class="st1">
 <a onclick="javascript:document.getElementById('st2').style.display='block'" href="javascript:void(0)">
-	<h3>Лабораторная работа №1</h3>
+	<h3>Лабораторная работа №1</h3></a>
 	<h5><b>"Экосистема разработки программ с открытым кодом":</b></h5>
 	Создание персональной страницы-отчета на github и работа с git<br>
 <div id="st2" class="st2" style="display:none"> 
 <a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st2').style.display='none'"><p>Цели:</p>
 	<p>1. Зарегистрироваться на GitHub;</p> <br>
 <p>2. Создать персональную веб страницу-отчёт с использованием html, css, js;</p> <br>
-<p>3. Загрузить персональную веб страницу-отчёт в репозиторий на GitHub.</p></a></div>
+<p>3. Загрузить персональную веб страницу-отчёт в репозиторий на GitHub.</p></div>
 </div>
 </section>
 	<section id="2">
 <div class="frame">
 <div class="st1">  
 <a onclick="javascript:document.getElementById('st3').style.display='block'" href="javascript:void(0)">
-	<h3>Лабораторная работа №2</h3>
+	<h3>Лабораторная работа №2</h3></a>
 	<h5><b>"Разработка простого веб-приложения":</b></h5>
 Проектирование и разработка индивидуального или коллективного веб-приложения с использованием html,css,js + json,xml
 <div id="st3" class="st2" style="display:none">
