--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 				<p>2. Создана <a href="https://github.com/OAS301/oas301.github.io">персональная веб страница-отчёт</a> на GitHub с использованием html, css, js;</p> <br>
 				<p>3. <a href="https://oas301.github.io">Персональная страница-отчет</a> загружена на хостинг GitHub.</p></div>
 			</div>
+			</div>
+			</div>
 		</section>
 	
 	<p>
@@ -45,7 +47,8 @@
 				Проектирование и разработка индивидуального веб-приложения с использованием html,css,js + json,xml
 			<div id="st2" class="st2" style="display:none">
 			<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st2').style.display='none'">
-				
+			</div>
+			</div>
 			</div>
 		</section>
 	</p>
@@ -58,6 +61,8 @@
 				<h1>Лабораторная работа №3</h1></a>
 				<h3><b>"Настройка локальной сети передачи данных":</b></h3>
 				<b><p align="center">Вариант №3</p></b><br>
+				<div id="st2" class="st2" style="display:none">
+				<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st2').style.display='none'">
 					<p><b>Цель лабораторной работы:</b> ознакомиться с принципами работы компьютерных сетей, базовой настройкой сетевого оборудования и статической маршрутизацией.</p>
 					<br>
 					<p align="center"><img src="pic/0.jpg"></p>
@@ -92,7 +97,8 @@
 					<p><img src="pic/15.jpg"></p>
 			<div id="st3" class="st3" style="display:none">\
 			<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st3').style.display='none'">
-				
+			</div>
+			</div>
 			</div>
 		</section>
 	</p>
