--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 		</header>
 		<section id="1">
 			<div class="frame">
-			<div class="st1">
+			<div class="st">
 			<a onclick="javascript:document.getElementById('st1').style.display='block'" href="javascript:void(0)">
 				<h1>Лабораторная работа №1</h1></a>
 				<h3><b>"Экосистема разработки программ с открытым кодом":</b></h3>
 				Создание персональной страницы-отчета на github и работа с git
-			<div id="st1" class="st1" style="display:none"> 
-			<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st1').style.display='none'">
 				<p>Выполненные задачи:</p>
 				<p>1. Зарегистрироваться на GitHub;</p> <br>
 				<p>2. Создана <a href="https://github.com/OAS301/oas301.github.io">персональная веб страница-отчёт</a> на GitHub с использованием html, css, js;</p> <br>
-				<p>3. <a href="https://oas301.github.io">Персональная страница-отчет</a> загружена на хостинг GitHub.</p></div>
+				<p>3. <a href="https://oas301.github.io">Персональная страница-отчет</a> загружена на хостинг GitHub.</p>
+			<div id="st1" class="st1" style="display:none"> 
+			<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st1').style.display='none'">Скрыть</a>
 			</div>
 			</div>
 			</div>
@@ -40,13 +40,13 @@
 	<p>
 		<section id="2">
 			<div class="frame">
-			<div class="st2">  
+			<div class="st">  
 			<a onclick="javascript:document.getElementById('st2').style.display='block'" href="javascript:void(0)">
 				<h1>Лабораторная работа №2</h1></a>
 				<h3><b>"Разработка простого веб-приложения":</b></h3>
 				Проектирование и разработка индивидуального веб-приложения с использованием html,css,js + json,xml
 			<div id="st2" class="st2" style="display:none">
-			<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st2').style.display='none'">
+			<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st2').style.display='none'">Скрыть</a>
 			</div>
 			</div>
 			</div>
@@ -56,7 +56,7 @@
 	<p>
 		<section id="3">
 			<div class="frame">
-			<div class="st3">  
+			<div class="st">  
 			<a onclick="javascript:document.getElementById('st3').style.display='block'" href="javascript:void(0)">
 				<h1>Лабораторная работа №3</h1></a>
 				<h3><b>"Настройка локальной сети передачи данных":</b></h3>
@@ -95,8 +95,8 @@
 					<p><b>11. </b> Установить баннер на сетевое оборудование.</p>
 					<p><img src="pic/14.jpg"></p>
 					<p><img src="pic/15.jpg"></p>
-			<div id="st3" class="st3" style="display:none">\
-			<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st3').style.display='none'">
+			<div id="st3" class="st" style="display:none">\
+			<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st3').style.display='none'">Скрыть</a>
 			</div>
 			</div>
 			</div>
@@ -106,13 +106,14 @@
 	<p>
 		<section id="4">
 			<div class="frame">
-			<div class="st4">  
+			<div class="st">  
 			<a onclick="javascript:document.getElementById('st4').style.display='block'" href="javascript:void(0)">
 				<h1>Подготовка к экзамену</h1></a>
 				<h3><b></b></h3>
-			<div id="st4" class="st4" style="display:none">
-			<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st4').style.display='none'">
-				
+			<div id="st4" class="st" style="display:none">
+			<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st4').style.display='none'">Скрыть</a>
+			</div>
+			</div>
 			</div>
 		</section>
 	</p>
