--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
 			<div class="frame">
 			<div class="st">
 			<a onclick="javascript:document.getElementById('st1').style.display='block'" href="javascript:void(0)">
+				<p></p>
 				<h1>Лабораторная работа №1</h1></a>
 				<h3><b>"Экосистема разработки программ с открытым кодом":</b></h3>
 				Создание персональной страницы-отчета на github и работа с git
+				<div id="st1" class="st" style="display:none"> 
 				<p>Выполненные задачи:</p>
-				<p>1. Зарегистрироваться на GitHub;</p> <br>
-				<p>2. Создана <a href="https://github.com/OAS301/oas301.github.io">персональная веб страница-отчёт</a> на GitHub с использованием html, css, js;</p> <br>
+				<p>1. Зарегистрироваться на GitHub;</p>
+				<p>2. Создана <a href="https://github.com/OAS301/oas301.github.io">персональная веб страница-отчёт</a> на GitHub с использованием html, css, js;</p>
 				<p>3. <a href="https://oas301.github.io">Персональная страница-отчет</a> загружена на хостинг GitHub.</p>
-			<div id="st1" class="st1" style="display:none"> 
-			<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st1').style.display='none'">Скрыть</a>
-			</div>
+				<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st1').style.display='none'">Скрыть</a>
+				</div>
 			</div>
 			</div>
 		</section>
@@ -42,11 +43,12 @@
 			<div class="frame">
 			<div class="st">  
 			<a onclick="javascript:document.getElementById('st2').style.display='block'" href="javascript:void(0)">
+				<p></p>
 				<h1>Лабораторная работа №2</h1></a>
-				<h3><b>"Разработка простого веб-приложения":</b></h3>
+				<h3><b>"Разработка простого веб-приложения"</b></h3>
+				<div id="st2" class="st2" style="display:none">
 				Проектирование и разработка индивидуального веб-приложения с использованием html,css,js + json,xml
-			<div id="st2" class="st2" style="display:none">
-			<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st2').style.display='none'">Скрыть</a>
+				<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st2').style.display='none'">Скрыть</a>
 			</div>
 			</div>
 			</div>
@@ -58,10 +60,11 @@
 			<div class="frame">
 			<div class="st">  
 			<a onclick="javascript:document.getElementById('st3').style.display='block'" href="javascript:void(0)">
+				<p></p>
 				<h1>Лабораторная работа №3</h1></a>
 				<h3><b>"Настройка локальной сети передачи данных":</b></h3>
 				<b><p align="center">Вариант №3</p></b><br>
-				<div id="st2" class="st2" style="display:none">
+				<div id="st3" class="st" style="display:none">
 				<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st2').style.display='none'">
 					<p><b>Цель лабораторной работы:</b> ознакомиться с принципами работы компьютерных сетей, базовой настройкой сетевого оборудования и статической маршрутизацией.</p>
 					<br>
@@ -95,7 +98,6 @@
 					<p><b>11. </b> Установить баннер на сетевое оборудование.</p>
 					<p><img src="pic/14.jpg"></p>
 					<p><img src="pic/15.jpg"></p>
-			<div id="st3" class="st" style="display:none">\
 			<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st3').style.display='none'">Скрыть</a>
 			</div>
 			</div>
@@ -108,10 +110,11 @@
 			<div class="frame">
 			<div class="st">  
 			<a onclick="javascript:document.getElementById('st4').style.display='block'" href="javascript:void(0)">
+				<p></p>
 				<h1>Подготовка к экзамену</h1></a>
+				<div id="st4" class="st" style="display:none">
 				<h3><b></b></h3>
-			<div id="st4" class="st" style="display:none">
-			<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st4').style.display='none'">Скрыть</a>
+				<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st4').style.display='none'">Скрыть</a>
 			</div>
 			</div>
 			</div>
