--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<p>1. Зарегистрироваться на GitHub;</p>
 				<p>2. Создана <a href="https://github.com/OAS301/oas301.github.io">персональная веб страница-отчёт</a> на GitHub с использованием html, css, js;</p>
 				<p>3. <a href="https://oas301.github.io">Персональная страница-отчет</a> загружена на хостинг GitHub.</p>
-				<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st1').style.display='none'">Скрыть</a>
+				<a text-align="center", onclick="document.getElementById('st1').style.display='none'">Скрыть</a>
 				</div>
 			</div>
 			</div>
@@ -48,7 +48,7 @@
 				<h3><b>"Разработка простого веб-приложения"</b></h3>
 				<div id="st2" class="st2" style="display:none">
 				Проектирование и разработка индивидуального веб-приложения с использованием html,css,js + json,xml
-				<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st2').style.display='none'">Скрыть</a>
+				<a text-align="center", onclick="document.getElementById('st2').style.display='none'">Скрыть</a>
 			</div>
 			</div>
 			</div>
@@ -98,7 +98,7 @@
 					<p><b>11. </b> Установить баннер на сетевое оборудование.</p>
 					<p><img src="pic/14.jpg"></p>
 					<p><img src="pic/15.jpg"></p>
-			<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st3').style.display='none'">Скрыть</a>
+			<a text-align="center", onclick="document.getElementById('st3').style.display='none'">Скрыть</a>
 			</div>
 			</div>
 			</div>
@@ -114,7 +114,7 @@
 				<h1>Подготовка к экзамену</h1></a>
 				<div id="st4" class="st" style="display:none">
 				<h3><b></b></h3>
-				<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st4').style.display='none'">Скрыть</a>
+				<a text-align="center", style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st4').style.display='none'">Скрыть</a>
 			</div>
 			</div>
 			</div>
