--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div class="st">
 			<a onclick="javascript:document.getElementById('st1').style.display='block'" href="javascript:void(0)">
 				<p></p>
-				<h1>Лабораторная работа №1</h1></a>
+				<h1 align="center">Лабораторная работа №1</h1></a>
 				<h3><b>"Экосистема разработки программ с открытым кодом":</b></h3>
 				Создание персональной страницы-отчета на github и работа с git
 				<div id="st1" class="st" style="display:none"> 
@@ -32,7 +32,7 @@
 				<p>1. Зарегистрироваться на GitHub;</p>
 				<p>2. Создана <a href="https://github.com/OAS301/oas301.github.io">персональная веб страница-отчёт</a> на GitHub с использованием html, css, js;</p>
 				<p>3. <a href="https://oas301.github.io">Персональная страница-отчет</a> загружена на хостинг GitHub.</p>
-				<a text-align="center", onclick="document.getElementById('st1').style.display='none'">Скрыть</a>
+				<a align="center" onclick="document.getElementById('st1').style.display='none'">Скрыть</a>
 				</div>
 			</div>
 			</div>
@@ -44,11 +44,11 @@
 			<div class="st">  
 			<a onclick="javascript:document.getElementById('st2').style.display='block'" href="javascript:void(0)">
 				<p></p>
-				<h1>Лабораторная работа №2</h1></a>
+				<h1 align="center">Лабораторная работа №2</h1></a>
 				<h3><b>"Разработка простого веб-приложения"</b></h3>
-				<div id="st2" class="st2" style="display:none">
-				Проектирование и разработка индивидуального веб-приложения с использованием html,css,js + json,xml
-				<a text-align="center", onclick="document.getElementById('st2').style.display='none'">Скрыть</a>
+				<div id="st2" class="st" style="display:none">
+				<p>Проектирование и разработка индивидуального веб-приложения с использованием html,css,js + json,xml</p>
+				<a align="center" onclick="document.getElementById('st2').style.display='none'">Скрыть</a>
 			</div>
 			</div>
 			</div>
@@ -61,11 +61,10 @@
 			<div class="st">  
 			<a onclick="javascript:document.getElementById('st3').style.display='block'" href="javascript:void(0)">
 				<p></p>
-				<h1>Лабораторная работа №3</h1></a>
-				<h3><b>"Настройка локальной сети передачи данных":</b></h3>
-				<b><p align="center">Вариант №3</p></b><br>
+				<h1 align="center">Лабораторная работа №3</h1></a>
+				<h3><b>"Настройка локальной сети передачи данных"</b></h3>
 				<div id="st3" class="st" style="display:none">
-				<a style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st2').style.display='none'">
+				<b><p align="center">Вариант №3</p></b><br>
 					<p><b>Цель лабораторной работы:</b> ознакомиться с принципами работы компьютерных сетей, базовой настройкой сетевого оборудования и статической маршрутизацией.</p>
 					<br>
 					<p align="center"><img src="pic/0.jpg"></p>
@@ -98,7 +97,7 @@
 					<p><b>11. </b> Установить баннер на сетевое оборудование.</p>
 					<p><img src="pic/14.jpg"></p>
 					<p><img src="pic/15.jpg"></p>
-			<a text-align="center", onclick="document.getElementById('st3').style.display='none'">Скрыть</a>
+			<a text-align="center" onclick="document.getElementById('st3').style.display='none'">Скрыть</a>
 			</div>
 			</div>
 			</div>
@@ -111,10 +110,10 @@
 			<div class="st">  
 			<a onclick="javascript:document.getElementById('st4').style.display='block'" href="javascript:void(0)">
 				<p></p>
-				<h1>Подготовка к экзамену</h1></a>
+				<h1 align="center">Подготовка к экзамену</h1></a>
 				<div id="st4" class="st" style="display:none">
 				<h3><b></b></h3>
-				<a text-align="center", style="cursor:hand;cursor:pointer;" onclick="document.getElementById('st4').style.display='none'">Скрыть</a>
+				<a text-align="center" onclick="document.getElementById('st4').style.display='none'">Скрыть</a>
 			</div>
 			</div>
 			</div>
