--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 			<a onclick="javascript:document.getElementById('st1').style.display='block'" href="javascript:void(0)">
 				<p></p>
 				<h1 align="center">Лабораторная работа №1</h1></a>
-				<h3><b>"Экосистема разработки программ с открытым кодом":</b></h3>
-				Создание персональной страницы-отчета на github и работа с git
+				<h3 align="center"><b>"Экосистема разработки программ с открытым кодом"</b></h3>
 				<div id="st1" class="st" style="display:none"> 
+				<p>Создание персональной страницы-отчета на github и работа с git</p>
 				<p>Выполненные задачи:</p>
 				<p>1. Зарегистрироваться на GitHub;</p>
 				<p>2. Создана <a href="https://github.com/OAS301/oas301.github.io">персональная веб страница-отчёт</a> на GitHub с использованием html, css, js;</p>
@@ -45,7 +45,7 @@
 			<a onclick="javascript:document.getElementById('st2').style.display='block'" href="javascript:void(0)">
 				<p></p>
 				<h1 align="center">Лабораторная работа №2</h1></a>
-				<h3><b>"Разработка простого веб-приложения"</b></h3>
+				<h3 align="center"><b>"Разработка простого веб-приложения"</b></h3>
 				<div id="st2" class="st" style="display:none">
 				<p>Проектирование и разработка индивидуального веб-приложения с использованием html,css,js + json,xml</p>
 				<a align="center" onclick="document.getElementById('st2').style.display='none'">Скрыть</a>
@@ -62,7 +62,7 @@
 			<a onclick="javascript:document.getElementById('st3').style.display='block'" href="javascript:void(0)">
 				<p></p>
 				<h1 align="center">Лабораторная работа №3</h1></a>
-				<h3><b>"Настройка локальной сети передачи данных"</b></h3>
+				<h3 align="center"><b>"Настройка локальной сети передачи данных"</b></h3>
 				<div id="st3" class="st" style="display:none">
 				<b><p align="center">Вариант №3</p></b><br>
 					<p><b>Цель лабораторной работы:</b> ознакомиться с принципами работы компьютерных сетей, базовой настройкой сетевого оборудования и статической маршрутизацией.</p>
@@ -112,7 +112,7 @@
 				<p></p>
 				<h1 align="center">Подготовка к экзамену</h1></a>
 				<div id="st4" class="st" style="display:none">
-				<h3><b></b></h3>
+				<h3 align="center"><b></b></h3>
 				<a text-align="center" onclick="document.getElementById('st4').style.display='none'">Скрыть</a>
 			</div>
 			</div>
