--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Личная страница Овечкина Антона</title>
+		<title>Личная страница</title>
 			<link rel="stylesheet" type="text/css" href="css/css.css">
 			<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 	</head>
