--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Личная страница</title>
+		<title>Личная страница Овечкина Антона</title>
 			<link rel="stylesheet" type="text/css" href="css/css.css">
 			<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 	</head>
@@ -32,7 +32,8 @@
 				<p>1. Зарегистрироваться на GitHub;</p>
 				<p>2. Создана <a href="https://github.com/OAS301/oas301.github.io">персональная веб страница-отчёт</a> на GitHub с использованием html, css, js;</p>
 				<p>3. <a href="https://oas301.github.io">Персональная страница-отчет</a> загружена на хостинг GitHub.</p>
-				<a align="center" onclick="document.getElementById('st1').style.display='none'">Скрыть</a>
+				<a align="center" onclick="document.getElementById('st1').style.display='none'">
+				<h5 align="center">Скрыть</h5></a>
 				</div>
 			</div>
 			</div>
@@ -48,7 +49,8 @@
 				<h3 align="center"><b>"Разработка простого веб-приложения"</b></h3>
 				<div id="st2" class="st" style="display:none">
 				<p>Проектирование и разработка индивидуального веб-приложения с использованием html,css,js + json,xml</p>
-				<a align="center" onclick="document.getElementById('st2').style.display='none'">Скрыть</a>
+				<a align="center" onclick="document.getElementById('st2').style.display='none'">
+				<h5 align="center">Скрыть</h5></a>
 			</div>
 			</div>
 			</div>
@@ -97,7 +99,8 @@
 					<p><b>11. </b> Установить баннер на сетевое оборудование.</p>
 					<p><img src="pic/14.jpg"></p>
 					<p><img src="pic/15.jpg"></p>
-			<a text-align="center" onclick="document.getElementById('st3').style.display='none'">Скрыть</a>
+			<a text-align="center" onclick="document.getElementById('st3').style.display='none'">
+			<h5 align="center">Скрыть</h5></a>
 			</div>
 			</div>
 			</div>
@@ -113,7 +116,8 @@
 				<h1 align="center">Подготовка к экзамену</h1></a>
 				<div id="st4" class="st" style="display:none">
 				<h3 align="center"><b></b></h3>
-				<a text-align="center" onclick="document.getElementById('st4').style.display='none'">Скрыть</a>
+				<a text-align="center" onclick="document.getElementById('st4').style.display='none'">
+				<h5 align="center">Скрыть</h5></a>
 			</div>
 			</div>
 			</div>
