--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<p>2. Создана <a href="https://github.com/OAS301/oas301.github.io">персональная веб страница-отчёт</a> на GitHub с использованием html, css, js;</p>
 				<p>3. <a href="https://oas301.github.io">Персональная страница-отчет</a> загружена на хостинг GitHub.</p>
 				<a align="center" onclick="document.getElementById('st1').style.display='none'">
-				<h5 align="center">Скрыть</h5></a>
+				<h4 align="center">Скрыть</h4></a>
 				</div>
 			</div>
 			</div>
@@ -50,7 +50,7 @@
 				<div id="st2" class="st" style="display:none">
 				<p>Проектирование и разработка индивидуального веб-приложения с использованием html,css,js + json,xml</p>
 				<a align="center" onclick="document.getElementById('st2').style.display='none'">
-				<h5 align="center">Скрыть</h5></a>
+				<h4 align="center">Скрыть</h4></a>
 			</div>
 			</div>
 			</div>
@@ -71,36 +71,36 @@
 					<br>
 					<p align="center"><img src="pic/0.jpg"></p>
 					<p><b>1. </b>Разместить на рабочем поле коммутатор и два компьютера и соединить их. Настроить адресацию на добавленных компьютерах без шлюза по умолчанию. Выполнить проверку работоспособности сети.</p>
-					<p><img src="pic/1.jpg"></p>
-					<p><img src="pic/2.jpg"></p>
-					<p><img src="pic/3.jpg"></p>
-					<p><img src="pic/4.jpg"></p>
+					<p align="center"><img src="pic/1.jpg"></p>
+					<p align="center"><img src="pic/2.jpg"></p>
+					<p align="center"><img src="pic/3.jpg"></p>
+					<p align="center"><img src="pic/4.jpg"></p>
 					<p><b>2. </b>Добавить на рабочее поле еще один коммутатор с двумя компьютерами и настроить адресацию из другой подсети. </p>
-					<p><img src="pic/5.jpg"></p>
-					<p><img src="pic/6.jpg"></p>
-					<p><img src="pic/7.jpg"></p>
+					<p align="center"><img src="pic/5.jpg"></p>
+					<p align="center"><img src="pic/6.jpg"></p>
+					<p align="center"><img src="pic/7.jpg"></p>
 					<p><b>3. </b> Соединить коммутаторы между собой и проверить работоспособность сети (Не работает, так как коммутаторы подсоединяются только к маршрутизаторам).</p>
 					<p><b>4. </b> Добавить маршрутизатор на рабочее поле, настроить интерфейсы маршрутизатора для существующих подсетей и проверить работоспособность.(Сеть наработоспособна из-за отсутствия маршрутов по умолчанию.)</p>
-					<p><img src="pic/8.jpg"></p>
+					<p align="center"><img src="pic/8.jpg"></p>
 					<p><b>5. </b> Указать шлюз по умолчанию.</p>
-					<p><img src="pic/9.jpg"></p>
+					<p align="center"><img src="pic/9.jpg"></p>
 					<p><b>6. </b> Добавить на рабочее поле еще один маршрутизатор. Подключить к нему коммутатор и компьютер.</p>
-					<p><img src="pic/10.jpg"></p>
+					<p align="center"><img src="pic/10.jpg"></p>
 					<p><b>7. </b> Соединить между собой маршрутизаторы и настроить между ними сеть с префиксом /30.</p>
 					<p><b>8. </b> Проверить работоспособность сети, отправив сообщение сети A в сеть С и из сети В в сеть С. (Сеть не работает, так как не настроена статическая маршрутизация.)</p>
 					<p><b>9. </b> Настроить статическую маршрутизацию между сетями. </p>
-					<p><img src="pic/11.jpg"></p>
-					<p><img src="pic/12.jpg"></p>
-					<p><img src="pic/13.jpg"></p>
+					<p align="center"><img src="pic/11.jpg"></p>
+					<p align="center"><img src="pic/12.jpg"></p>
+					<p align="center"><img src="pic/13.jpg"></p>
 					<p><b>10. </b> Настроить на сетевых устройствах пароли для привилегированного режима, для подключения через консоль, для подключения через telnet:
 					<p>Привелегрованный режим: enable password mypassword</p>
 					<p>Консоль: в режиме конфигурации терминала line console 0; password mypassword
 					<p>Telnet: в режиме конфигурации терминала line vty 0 4; password mypassword </p>
 					<p><b>11. </b> Установить баннер на сетевое оборудование.</p>
-					<p><img src="pic/14.jpg"></p>
-					<p><img src="pic/15.jpg"></p>
+					<p align="center"><img src="pic/14.jpg"></p>
+					<p align="center"><img src="pic/15.jpg"></p>
 			<a text-align="center" onclick="document.getElementById('st3').style.display='none'">
-			<h5 align="center">Скрыть</h5></a>
+			<h4 align="center">Скрыть</h4></a>
 			</div>
 			</div>
 			</div>
