--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				<p></p>
 				<h1 align="center">Подготовка к экзамену</h1></a>
 				<div id="st4" class="st" style="display:none">
-				<h3 align="center"><b></b></h3>
+				<h3 align="center"><b><a href="https://github.com/stankin/inet-2018/wiki/Билет-1">Ответ на 1 вопрос билета №1</a></b></h3>
 				<a text-align="center" onclick="document.getElementById('st4').style.display='none'">
 				<h5 align="center">Скрыть</h5></a>
 			</div>
