--- a/lab2/index.html
+++ b/lab2/index.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8">
     <title>Авторизация пользователя</title>
     <link href="css/style.css" media="screen" rel="stylesheet">
-    <link href="css/reset.css" media="screen" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,700italic,800italic,400,300,600,800' rel='stylesheet' type='text/css'>
-    <script src="js/get.js"></script>
-    <script src="js/validator.js"></script>
+    <script src="js/auth.js"></script>
 </head>
 <body>
 <div class="container">
