--- a/lab2/index.html
+++ b/lab2/index.html
@@ -2,10 +2,10 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
-    <title>Авторизация пользователя</title>
+    <title>LogIn User</title>
     <link href="css/style.css" media="screen" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,700italic,800italic,400,300,600,800' rel='stylesheet' type='text/css'>
-    <script src="js/auth.js"></script>
+    <script src="js/validator.js"></script>
 </head>
 <body>
 <div class="container">
@@ -64,5 +64,6 @@
             </fieldset>
          </form>
         </div>
+       <script src="js/auth.js"></script>
       </body>
     </html>
