--- a/lab2/index.html
+++ b/lab2/index.html
@@ -64,6 +64,7 @@
             </fieldset>
          </form>
         </div>
+       <script src="js/tab.js"></script>
        <script src="js/auth.js"></script>
       </body>
     </html>
