--- a/lab2/index.html
+++ b/lab2/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>LogIn User</title>
-    <link href="css/style.css" media="screen" rel="stylesheet">
+    <link href="/css/style.css" media="screen" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,700italic,800italic,400,300,600,800' rel='stylesheet' type='text/css'>
-    <script src="js/validator.js"></script>
+    <script src="/js/validator.js"></script>
 </head>
 <body>
 <div class="container">
@@ -64,7 +64,20 @@
             </fieldset>
          </form>
         </div>
-       <script src="js/tab.js"></script>
-       <script src="js/auth.js"></script>
+       <script src="/js/tab.js"></script>
+       <script>
+            validator.message['date'] = 'not a real date';
+            $('form').on('blur', 'input[required], input.optional, select.required', validator.checkField).on('change', 'select.required', validator.checkField).on('keypress', 'input[required][pattern]', validator.keypress);
+            $('.multi.required').on('keyup blur', 'input', function() {
+                validator.checkField.apply($(this).siblings().last()[0]);
+            });
+            $('form').submit(function(e) {
+                e.preventDefault();
+                var submit = true;
+                if (!validator.checkAll($(this))) submit = false;
+                if (submit) this.submit();
+                return false;
+            });
+        </script>
       </body>
     </html>
