--- a/lab2/index.html
+++ b/lab2/index.html
@@ -64,7 +64,7 @@
             </fieldset>
          </form>
         </div>
-       <script src="js/tab.js"></script>
+       <script src="js/tabs.js"></script>
        <script>
             validator.message['date'] = 'not a real date';
             $('form').on('blur', 'input[required], input.optional, select.required', validator.checkField).on('change', 'select.required', validator.checkField).on('keypress', 'input[required][pattern]', validator.keypress);
