--- a/lab2/index.html
+++ b/lab2/index.html
@@ -64,6 +64,8 @@
             </fieldset>
          </form>
         </div>
+        </div>
+    </div>
        <script src="js/tabs.js"></script>
        <script>
             validator.message['date'] = 'not a real date';
